; ModuleID = '/home/carl/AnghaBench/skynet/skynet-src/extr_socket_server.c_socket_trylock.c'
source_filename = "/home/carl/AnghaBench/skynet/skynet-src/extr_socket_server.c_socket_trylock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.socket_lock = type { i64, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.socket_lock*)* @socket_trylock to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @socket_trylock(%struct.socket_lock* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.socket_lock*, align 8
  store %struct.socket_lock* %0, %struct.socket_lock** %3, align 8
  %4 = load %struct.socket_lock*, %struct.socket_lock** %3, align 8
  %5 = getelementptr inbounds %struct.socket_lock, %struct.socket_lock* %4, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = icmp eq i64 %6, 0
  br i1 %7, label %8, label %16

8:                                                ; preds = %1
  %9 = load %struct.socket_lock*, %struct.socket_lock** %3, align 8
  %10 = getelementptr inbounds %struct.socket_lock, %struct.socket_lock* %9, i32 0, i32 1
  %11 = load i32, i32* %10, align 8
  %12 = call i32 @spinlock_trylock(i32 %11)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %15, label %14

14:                                               ; preds = %8
  store i32 0, i32* %2, align 4
  br label %21

15:                                               ; preds = %8
  br label %16

16:                                               ; preds = %15, %1
  %17 = load %struct.socket_lock*, %struct.socket_lock** %3, align 8
  %18 = getelementptr inbounds %struct.socket_lock, %struct.socket_lock* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = add nsw i64 %19, 1
  store i64 %20, i64* %18, align 8
  store i32 1, i32* %2, align 4
  br label %21

21:                                               ; preds = %16, %14
  %22 = load i32, i32* %2, align 4
  ret i32 %22
}

declare dso_local i32 @spinlock_trylock(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
